
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8 ;
typedef int uint32 ;
typedef int STREAM ;


 int SEC_RANDOM_SIZE ;
 int sec_crypted_random ;
 int sec_generate_keys (int *,int *,int ) ;
 int sec_parse_crypt_info (int ,int *,int **,int **,int **) ;
 int sec_rsa_encrypt (int ,int *,int,int *,int *) ;

__attribute__((used)) static void
sec_process_crypt_info(STREAM s)
{
 uint8 *server_random, *modulus, *exponent;
 uint8 client_random[SEC_RANDOM_SIZE];
 uint32 rc4_key_size;

 if (!sec_parse_crypt_info(s, &rc4_key_size, &server_random, &modulus, &exponent))
  return;


 sec_rsa_encrypt(sec_crypted_random, client_random, SEC_RANDOM_SIZE, modulus, exponent);
 sec_generate_keys(client_random, server_random, rc4_key_size);
}
